# SmartHealth

./: .gitignore  CMakeLists.txt  README.md
2018/code/mfile/: ecg_1.mlx  qrs_detect_reprocess.m
2018/data/: 100.atr
2018/students/: S201815032  S201815703.m  Untitled.m  work_0921.m
2018/students/000001/: ecg_hp.m  ecg_plot.m  ecg_psd.m  ecg_qrsdetect.m  readme.md  test1.m
2018/students/S201815032/: S201815032-ecg.docx  ecg_hp.m  ecg_lp.m  ecg_qrs_detect.m  peek_R.m  qrs_detect.m  readme.md
2018/students/S201815033/: Ecg_filter1.m  Ecg_psd.m  README.md  ecg_lp.m  qrs_detecter.m  qrs_detecter100test.m
2018/students/S201815034/: readme.md
2018/students/S201815048/: QrsDetect.cpp  readme.md
2018/students/S201815049/: S201815049.m  ecg-R-detect03.m  ecg_flite01r.m  ecg_function_psd02.m  ecg_psd02.m  readme.md
2018/students/S201815052/: ECG_filter.m  ECG_filter说明.doc  qrs_detect.m  readme.md
2018/students/S201815056/: QRSDetect.h  QrsDetect.cpp  S201815056  S215555  ecg_psd.m  findpeaks.m  main.cpp  qrs_detec  qrs_detect.m  readme.md
2018/students/S201815061/: QrsDetect.h  QrsDetect_1.cpp  S201815061  main.cpp  readme.md
2018/students/S201815703/: README.md  ecg_drawPoint.m  (+3 more)
DATA/mitbd/: 234.atr
DOC/: charp01.html  charp01.md  charp02.html  charp02.md  index.html  readme.html  readme.md
DOC/ref/: 选修名单统计2018.csv
ECG_CP/: CMakeLists.txt  main.cpp
ECG_PY/: charp01.ipynb  charp02.ipynb
ccode/: CMakeLists.txt
ccode/app/: CMakeLists.txt  main.cpp
ccode/ecglib/: CMakeLists.txt  ecglib.cpp  ecglib.h
python/: charp01.ipynb  charp02.ipynb  main.py
(+22 files in other folders)
