
project(SMARTHEALTH VERSION 0.1.0)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../build/lib) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/../build/bin) 
add_subdirectory(ecglib)
add_subdirectory(app)


message(STATUS ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS ${PROJECT_SOURCE_DIR})
message(STATUS ${LIBRARY_OUTPUT_PATH})
message(STATUS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
message(STATUS ${PROJECT_BINARY_DIR})
message(STATUS ${CMAKE_PROJECT_VERSION})
